# ChangeLog for x11-misc/xpad
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xpad/ChangeLog,v 1.58 2009/03/15 22:03:44 gentoofan23 Exp $

  15 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org> xpad-3.0.ebuild:
  stable amd64, bug 253445

*xpad-3.0 (15 Mar 2009)

  15 Mar 2009; Raúl Porcel <armin76@gentoo.org> metadata.xml,
  +xpad-3.0.ebuild:
  Version bump wrt #238579

*xpad-2.14 (21 Jan 2008)

  21 Jan 2008; Samuli Suominen <drac@gentoo.org> +xpad-2.14.ebuild:
  Version bump.

  02 Aug 2007; Roy Marples <uberlord@gentoo.org> xpad-2.12.ebuild:
  Keyworded ~x86-fbsd, #156902 thanks to Marc Kowarsky.

*xpad-2.12 (24 Oct 2006)

  24 Oct 2006; Fernando J. Pereda <ferdy@gentoo.org> +xpad-2.12.ebuild:
  New upstream version.

  14 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> -xpad-1.13.ebuild,
  -xpad-2.10.ebuild:
  Remove old version.

  11 Oct 2006; Fernando J. Pereda <ferdy@gentoo.org> xpad-2.11.ebuild:
  Add dev-util/pkgconfig dependency as per bug #150792. Spotted by Patrick
  Lauer <patrick@gentoo.org>

  04 May 2006; Daniel Gryniewicz <dang@gentoo.org> xpad-2.11.ebuild:
  Marked stable on amd64 per bug #131792

  30 Apr 2006; Joseph Jezak <josejx@gentoo.org> xpad-2.11.ebuild:
  Marked ppc stable for bug #131792.

  30 Apr 2006; Joshua Jackson <tsunam@gentoo.org> xpad-2.11.ebuild:
  Stable x86; bug #131792

  30 Apr 2006; Ferris McCormick <fmccor@gentoo.org> xpad-2.11.ebuild:
  Add sparc keyword --- Bug #131792.  Builds and "runs" fine.

  30 Apr 2006; Fernando J. Pereda <ferdy@gentoo.org> xpad-2.11.ebuild:
  Stable on alpha wrt bug #131792

*xpad-2.11 (02 Feb 2006)

  02 Feb 2006; Fernando J. Pereda <ferdy@gentoo.org> +xpad-2.11.ebuild:
  New upstream version

  22 Nov 2005; Fernando J. Pereda <ferdy@gentoo.org>
  -files/xpad-2.9-smallicons.patch, -files/xpad-2.9-toolbar-chsize.patch,