@@ -4,7 +4,7 @@ DIST xpad-2.14.tar.bz2 221859 RMD160 60854a2fd8ebb4689560c6037325da1e8ec6d361 SH
 DIST xpad-3.0.tar.bz2 206398 RMD160 2ac278781f46c5163ed2944153297c651df8cbc0 SHA1 b108ff2cf8af9273621368bd486be1b6965930a1 SHA256 3123798c73e0b23aa9c099337786eb44bedaac86deb32f76f5f0c124b178cddd
 EBUILD xpad-2.11.ebuild 665 RMD160 b70bb4e57a9811bfa7a95406d90d9caee679c894 SHA1 faf358fb2847c52091dec57936dea51211a41d57 SHA256 568c52f23ca4c438da30593083099cd8cce84a4c08709e20499be436d216c1a8
 EBUILD xpad-2.12.ebuild 680 RMD160 fe4bf755565c8dae7b35817bdb30b06c5bceefac SHA1 138a236b4d5f3bace1d62a13128e0abea2cbc948 SHA256 1ed1bd216dee7ce802d6580132d78b4c104fe6b828c49d59f9536b0220a38fd8
-EBUILD xpad-2.14.ebuild 687 RMD160 35041e1a53a4bcc93a7be26eb869967e4741b076 SHA1 cd81f19dafc2e076445cb3f6a597656cb92052ca SHA256 2a5f032d5509901fdddd1a302e790e96636169b9c0380610281afb967e2b3cfc
+EBUILD xpad-2.14.ebuild 690 RMD160 41b91c288b48294741283a16fdbaafca46c5d646 SHA1 7a94daf679a3a7c73db61f6ec65e6963dafd5521 SHA256 d214356301dfc98b31eb1de657604a277a801251eaf81176e5f8fbcc4e5aebaa
 EBUILD xpad-3.0.ebuild 711 RMD160 8b7917bd4cc9472fdc3216e902789d706d0156ad SHA1 45c7356efbc56c3f961065d623e2dad2a68fe55d SHA256 715d69d3ce64fd354eae6e2637d57f94f562e4e55ba2276b004bc41db4903845
-MISC ChangeLog 7678 RMD160 266f0192a644434b19f9259aa9d8ca4f6676f0c2 SHA1 e47fa1675be3ac863f5d1a59bc8f4a7092ad37a0 SHA256 d0b8bee3c9c0b82032ab312f14c8ba802e7aec3f37e142ed45299074bda7b0ef
+MISC ChangeLog 7779 RMD160 3f864e7b1e3c8b8e1015981c75dd290f43019c87 SHA1 6b5f9f6036113524e9fc96098f3c6efd5b6bf909 SHA256 7c0f5b2ae77dce7f9b21c7e27f5827bae35aa97a8b3d833e49f460e781f215ca
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
