@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xpad
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xpad/ChangeLog,v 1.58 2009/03/15 22:03:44 gentoofan23 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xpad/ChangeLog,v 1.59 2009/03/18 19:17:16 klausman Exp $
+
+  18 Mar 2009; Tobias Klausmann <klausman@gentoo.org> xpad-2.14.ebuild:
+  Stable on alpha, bug #253445
 
   15 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org> xpad-3.0.ebuild:
   stable amd64, bug 253445
